# screenshot-src

./: CMakeLists.txt  README.md
cmake/: FindAshitaSDK.cmake  FindLodePNG.cmake
src/: defines.hpp  exports.def  screenshot.cpp  screenshot.hpp
